# ERL

./: LUAAPI.md  README.md
ERL/: CMakeLists.txt  FindLua.cmake  adapter.cl  experiments.txt  gasBlur.cl  settings.txt
ERL/experiments/: languagemodelling.lua  polebalancing.lua  textcorpus.txt
ERL/source/: Main.cpp
ERL/source/ERL/: ERLConfig.h  ERLConfig.h.in  Uncopyable.h
ERL/source/ERL/experiments/: ExperimentAND.cpp  ExperimentAND.h  ExperimentOR.cpp  ExperimentOR.h  ExperimentPoleBalancing.cpp  ExperimentPoleBalancing.h  ExperimentXOR.cpp  ExperimentXOR.h  LuaExperiment.cpp  LuaExperiment.h
ERL/source/ERL/field/: Field2D.cpp  Field2D.h  Field2DCL.cpp  Field2DCL.h  Field2DEvolver.cpp  Field2DEvolver.h  Field2DEvolverSettings.cpp  Field2DEvolverSettings.h  Field2DGenes.cpp  Field2DGenes.h
ERL/source/ERL/platform/: ComputeSystem.cpp  ComputeSystem.h  Field2DGenesToCL.cpp  Field2DGenesToCL.h  Logger.cpp  Logger.h  RuleToCL.cpp  RuleToCL.h  SoftwareImage2D.h  ThreadPool.cpp  ThreadPool.h  Uncopyable.h
ERL/source/ERL/simulation/: EvolutionaryTrainer.cpp  EvolutionaryTrainer.h  Experiment.cpp  Experiment.h
ERL/source/ERL/visualization/: FieldVisualizer.cpp  FieldVisualizer.h
ERL/source/hn/: HyperPhenotype.cpp  HyperPhenotype.h
ERL/source/ne/: Genotype.cpp  Genotype.h  Phenotype.cpp  Phenotype.h
ERL/source/neat/: ConnectionGene.cpp  ConnectionGene.h  Evolvable.cpp  Evolvable.h  Evolver.cpp  Evolver.h  NetworkGenotype.cpp  NetworkGenotype.h  NetworkPhenotype.cpp  NetworkPhenotype.h  Neuron.cpp  Neuron.h  NeuronInput.cpp  NeuronInput.h  ParentSelector.h  ParentSelectorProportional.cpp  ParentSelectorProportional.h  Uncopyable.h  UtilFuncs.h
